Fixed wrong sized images

--- a/src/styles/_casino.css
+++ b/src/styles/_casino.css
@@ -18,7 +18,7 @@
     background-color: #0056b3;
 }
 
-img {
+.gameIcon {
     height: 150px;
     width: auto;
     border-radius: 8px;
